<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/user_center_bg"
    >
    <include layout="@layout/topbar"
        android:id="@+id/topbar"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/et_oldpassword"
        style="@style/user_register_edit_style"
        android:hint="@string/enter_old_password"
        android:layout_below="@id/topbar"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        style="@style/user_register_edit_style"
        android:singleLine="true"
        android:id="@+id/et_newpassword"
        android:layout_below="@id/et_oldpassword"
        android:imeOptions="actionGo"
        android:layout_gravity="center"/>
    <Button
        android:text="@string/btn_modify_password"
        android:id="@+id/button_modify_password"
        android:layout_below="@+id/et_newpassword"
        android:layout_marginTop="20dp"
        style="@style/login_button_style"
        />
    <TextView android:id="@+id/success_tips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        android:layout_below="@id/topbar"
        android:visibility="gone"
        android:textSize="22sp"
        android:textColor="@color/null_err_code"
        android:text="@string/modify_success_tips"
        />

</RelativeLayout>

