<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/user_center_bg"
    >
    <include layout="@layout/topbar"
        android:id="@+id/topbar"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/et_username"
        android:layout_below="@id/topbar"
        android:hint="@string/register_account_hint"
        style="@style/user_register_edit_style"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_hint"
        android:singleLine="true"
        style="@style/user_register_edit_style"
        android:id="@+id/et_password"
        android:inputType="textVisiblePassword"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyz!@#$%\|[]{}~`^*-_+=?/"
        android:layout_below="@id/et_username"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_hint"
        android:singleLine="true"
        android:id="@+id/et_email"
        style="@style/user_register_edit_style"
        android:inputType="textEmailAddress"
        android:layout_below="@id/et_password"
        android:imeOptions="actionGo"
        android:layout_gravity="center"/>

    <Button
        android:text="@string/register_button"
        android:id="@+id/register"
        android:layout_below="@id/et_email"
        android:layout_marginTop="20dp"
        style="@style/login_button_style"
        />
</RelativeLayout>

