<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@drawable/diver_line"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:id="@+id/payment_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_user_txt"
        android:layout_marginLeft="@dimen/payment_item_margin_one"
        android:layout_marginRight="@dimen/payment_margin_one"
        android:layout_below="@id/line1"
        style="@style/payment_item"
        />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_user_txt"
        android:layout_alignBaseline="@id/payment_user"
        android:layout_toRightOf="@id/payment_user"
        android:layout_marginLeft="@dimen/payment_item_margin_three"
        style="@style/payment_item_user_name"
        />

    <TextView
        android:id="@+id/payment_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_amount_txt"
        android:layout_below="@id/payment_user"
        android:layout_alignLeft="@id/payment_user"
        style="@style/payment_item"
        />

    <TextView
        android:id="@+id/msg_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_txt"
        android:layout_alignBaseline="@id/payment_amount"
        android:layout_toRightOf="@id/payment_amount"
        android:layout_marginLeft="@dimen/payment_item_margin_three"
        style="@style/payment_item_unicom_button"
        />

    <TextView
        android:id="@+id/phone_num_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_num_txt"
        android:layout_below="@id/payment_amount"
        android:layout_alignLeft="@id/payment_user"
        style="@style/payment_item"
        android:layout_marginTop="@dimen/payment_margin_one"
        android:paddingBottom="@dimen/payment_item_text_padding"
        android:paddingTop="@dimen/payment_item_text_padding"
        />
    <EditText
        android:id="@+id/phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unicom_hint_txt"
        android:inputType="phone"
        android:layout_alignBaseline="@id/phone_num_tip"
        android:layout_toRightOf="@id/phone_num_tip"
        style="@style/payment_edit_text"
        android:maxLength="11"
        />
</RelativeLayout>