<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/user_center_bg"
    >
    <include layout="@layout/topbar"
        android:id="@+id/topbar"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        style="@style/user_register_edit_style"
        android:id="@+id/et_username"
        android:hint="@string/find_account_hint"
        android:layout_below="@id/topbar"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/find_email_hint"
        style="@style/user_register_edit_style"
        android:singleLine="true"
        android:id="@+id/et_email"
        android:layout_below="@id/et_username"
        android:layout_gravity="center"/>

    <Button
        android:text="@string/find_password_button"
        android:id="@+id/button_retrieve_password"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="20dp"
        style="@style/login_button_style"
        />

    <TextView android:id="@+id/phone_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/retrieve_phone_tip"
        android:padding="10dp"
        android:textColor="@color/login_text_color" />

    <TextView android:id="@+id/success_tips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        android:layout_below="@id/topbar"
        android:visibility="gone"
        android:textSize="20sp"
        android:textColor="@color/null_err_code"
        android:text="@string/retrieve_success_tips"
        />

</RelativeLayout>

