<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lv_top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/head_bar_bg"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/btBack"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:src="@drawable/headbar_back"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:contentDescription="@string/btn_back"
        />

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:background="@drawable/head_bar_line"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        style="@style/title_textview"
        android:text="@string/book_topic"
        android:singleLine="true"
        />

    <ImageView
        android:id="@+id/right_line"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:background="@drawable/head_bar_line"
        />

    <TextView
        android:id="@+id/btRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_book"
        style="@style/title_button"
        android:textAlignment="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:drawableLeft="@drawable/headbar_btn_search"
        android:drawablePadding="5dp"
        />

</LinearLayout>
